# graphing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_project.bat  generate_submission.bat
scripts/: build_em.sh  build_native.bat  shell.nix  start_server.sh
scripts/server/: index.html
shaders/: data.wgsl  lines.wgsl  render_config.wgsl
src/: index.html  main.cpp
src/Entity/: EntityManipulator.cpp  EntityManipulator.h  Transform.cpp  Transform.h  Window.cpp  Window.h
src/Graphing/: Curve.cpp  Curve.h  GraphingWindow.cpp  GraphingWindow.h  InputPoint.cpp  InputPoint.h  PascalCache.cpp  PascalCache.h
src/Graphing/Curves/: BBDeCasteljauBezier.cpp  BBDeCasteljauBezier.h  BBDeCasteljauPolynomial.cpp  BBDeCasteljauPolynomial.h  BaseFunction.cpp  BaseFunction.h  MidpointDeCasteljauBezier.cpp  MidpointDeCasteljauBezier.h  NLIDeCasteljauBezier.cpp  NLIDeCasteljauBezier.h  NLIDeCasteljauPolynomial.cpp  NLIDeCasteljauPolynomial.h
src/Platform/: Emscripten.cpp  Platform.h
src/Projects/: Project1.cpp  Project1.h  Project2.cpp  Project2.h  ProjectBase.cpp  ProjectBase.h
src/Render/: Attribute.h  ResizeableBuffer.cpp  ResizeableBuffer.h  Shader.cpp  Shader.h  TypedBuffer.h  Wgpu.cpp  Wgpu.h  WgpuUtil.cpp  WgpuUtil.h
src/Script/: Lua.cpp  Lua.h  Script.cpp  Script.h
src/Shaders/: ShaderPreprocess.cpp  ShaderPreprocess.h
